reachability_matrix/network_policies/namespaceSelector_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: infra-namespace-ingress
  namespace: infra
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backend
      ports:
        - protocol: TCP
          port: 27017
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15672
