reachability_matrix/network_policies/podSelector_egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-internal-egress
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: makeline-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - protocol: TCP
          port: 3000
    - to:
        - podSelector:
            matchLabels:
              app: product-service
      ports:
        - protocol: TCP
          port: 3002
