reachability_matrix/network_policies/podSelector_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: order-service-pod-ingress
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: order-service          
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: makeline-service   
        - podSelector:
            matchLabels:
              app: store-front      
      ports:
        - protocol: TCP
          port: 3000
